ChangeLog now explains how it is no longer updated
The ChangeLog update was stopped in each commit following the discussion in
task #13779. However, this choice was not reflected in the ChangeLog its
self. So if someone would open the ChangeLog, they would think the last
change was on November 5th, 2015! To avoid such confusions, an item was
added to the top of the ChangeLog explaining how we have stopped updating
it. Two new tasks have thus been defined:

 - task #14007: to automatically generate the ChangeLog from the version
   controlled history.

 - task #14008: to discuss if it is good to adopt the ChangeLog formatting
   in the commit messages.

This finishes task #13779.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2016-05-27  Mohammad Akhlaghi  <akhlaghi@gnu.org>
+
+        Following the discussions in task #13779, the ChangeLog has not
+        been updated since 2015-11-05 (previous log). Instead, the commit
+        messages are very descriptive. Git's blame tool can be used to
+        check the history of any part of the code very effectively.
+
+        Gnulib has scripts to generate a ChangeLog from the commit history
+        so building this file automatically is possible and will be
+        implemented (task #14007). Once this ChangeLog is automatically
+        generated, it will be removed from the version controlled
+        source. Until then this file will remain unchanged. There is also a
+        discussion for adopting the ChangeLog format in the commit messages
+        in task #14008.
+
+	* ChangeLog: no longer updated.
+
 2015-11-05  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
 	* doc/gnuastro.texi (Why C): Clarified explanations.
