NEWS file and webpage updated for version 0.1
Thew news file was updated in preparation for the first public release
(version 0.1). There were a lot of changes since the last update of the
NEWS file, but those changes are not a major concern the Gnuastro users at
this stage (that the libraries are not yet installable).

The webpage was also updated to include the links and remove the previous
notice (that the source code is not available).

--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,6 @@
 GNU Astronomy Utilities NEWS                          -*- outline -*-
 
-* Noteworthy changes in release 0.1 (YYYY-MM-DD) [stable]
-* <<    Until commit b6a3953 Updated list of utilities in the book    >>
-* <<           REMOVE THESE TWO LINES For THE 0.1 RELEASE             >>
+* Noteworthy changes in release 0.1 (2016-05-30) [stable]
 
 ** Bug fixes
 
